--- a/index.css
+++ b/index.css
@@ -29,12 +29,13 @@ body{
 }
 .herosection{
     width: 100;
-   height: 100vh;
+   height: auto;
     background-image: url(./images/Herosectionbg.png);
     background-size: cover;
     padding-left: 6%;
     padding-right:6%;
     padding-top: 11rem;
+    padding-bottom: 5rem;
     
 }
 
