--- a/index.css
+++ b/index.css
@@ -29,7 +29,7 @@ body{
 }
 .herosection{
     width: 100;
-   height: auto;
+    height: auto;
     background-image: url(./images/Herosectionbg.png);
     background-size: cover;
     padding-left: 6%;
@@ -151,6 +151,7 @@ p{
     padding-left: 6%;
     padding-right:6%;
     padding-top: 3rem;
+    padding-bottom: 4rem;
     
 }
 
@@ -264,7 +265,7 @@ p{
 }
 .herosection{
     width: 100;
-   height: 130vh;
+   height: auto;
     background-image: url(./images/Herosectionbg.png);
     background-size: cover;
     padding-left: 6%;
