--- a/home.css
+++ b/home.css
@@ -46,3 +46,10 @@ body{
     gap: 3rem;
 }
 
+.frame{
+    width: 100%;
+    height: 74vh;
+    padding-left: 7%;
+    padding-right: 7%;
+    padding-top: 6vh;
+}
