--- a/index.css
+++ b/index.css
@@ -114,7 +114,6 @@ p{
 #corner{
     width: 12rem;
 
-
 }
 @media  (min-width: 200px) {
 
@@ -145,7 +144,7 @@ p{
 }
 .herosection{
     width: 100;
-   height: auto;
+   height: 130vh;
     background-image: url(./images/Herosectionbg.png);
     background-size: cover;
     padding-left: 6%;
@@ -233,6 +232,7 @@ p{
 
 
 }
+
 }
  
 
@@ -265,12 +265,13 @@ p{
 }
 .herosection{
     width: 100;
-   height: auto;
+   height:115vh;
     background-image: url(./images/Herosectionbg.png);
     background-size: cover;
     padding-left: 6%;
     padding-right:6%;
-    padding-top: 3rem;
+    padding-top: 5rem;
+    padding-bottom: -3rem;
     
 }
 
@@ -356,6 +357,19 @@ p{
  
 
 
+@media (min-width: 400px) {
+    
+    .herosection{
+        width: 100;
+       height: 93vh;
+        background-image: url(./images/Herosectionbg.png);
+        background-size: cover;
+        padding-left: 5%;
+        padding-right:5%;
+        padding-top: 9rem;
+    }
+}
+
 
 
 @media (min-width: 567px) {
@@ -385,7 +399,7 @@ p{
     
     .herosection{
         width: 100;
-       height: 100vh;
+       height: 80vh;
         background-image: url(./images/Herosectionbg.png);
         background-size: cover;
         padding-left: 5%;
@@ -418,6 +432,7 @@ p{
     width: 6rem;
     
 }   
+
 }
 
 @media (min-width: 768px) {
@@ -434,7 +449,7 @@ p{
 
     .herosection{
         width: 100;
-       
+        height: 45%;
         background-image: url(./images/Herosectionbg.png);
         background-size: contain;
         padding-left: 5%;
