--- a/index.css
+++ b/index.css
@@ -144,7 +144,7 @@ p{
 }
 .herosection{
     width: 100;
-   height: 140vh;
+   height: auto;
     background-image: url(./images/Herosectionbg.png);
     background-size: cover;
     padding-left: 6%;
@@ -265,7 +265,7 @@ p{
 }
 .herosection{
     width: 100;
-   height:125vh;
+   height:140vh;
     background-image: url(./images/Herosectionbg.png);
     background-size: cover;
     padding-left: 6%;
@@ -361,7 +361,7 @@ p{
     
     .herosection{
         width: 100;
-       height: 93vh;
+       height: 105vh;
         background-image: url(./images/Herosectionbg.png);
         background-size: cover;
         padding-left: 5%;
@@ -399,7 +399,7 @@ p{
     
     .herosection{
         width: 100;
-       height: 90vh;
+       height: 100vh;
         background-image: url(./images/Herosectionbg.png);
         background-size: cover;
         padding-left: 5%;
@@ -449,7 +449,7 @@ p{
 
     .herosection{
         width: 100;
-        height: 55%;
+        height: 65%;
         background-image: url(./images/Herosectionbg.png);
         background-size: contain;
         padding-left: 5%;
