--- a/index.css
+++ b/index.css
@@ -265,7 +265,7 @@ p{
 }
 .herosection{
     width: 100;
-   height:140vh;
+   height:auto;
     background-image: url(./images/Herosectionbg.png);
     background-size: cover;
     padding-left: 6%;
@@ -355,20 +355,6 @@ p{
 }
 }
  
-
-
-@media (min-width: 400px) {
-    
-    .herosection{
-        width: 100;
-       height: 105vh;
-        background-image: url(./images/Herosectionbg.png);
-        background-size: cover;
-        padding-left: 5%;
-        padding-right:5%;
-        padding-top: 9rem;
-    }
-}
 
 
 
