--- a/index.css
+++ b/index.css
@@ -113,13 +113,20 @@ p{
 }
 #corner{
     width: 12rem;
-
+display: inline !important;
 }
-@media  (min-width: 200px) {
+#corn{
+    display: none !important;
+}
+.news{
+    color:white; 
+    line-height: 2rem;
+}
+@media  (min-width: 280px) {
 
        
 .navbar{
-    background-color: #090909 !important;
+    background-color:#090909 !important;
     color: #ffffff !important;
     padding-left: 5%;
     padding-right:5%;
@@ -144,19 +151,19 @@ p{
 }
 .herosection{
     width: 100;
-   height: auto;
+   height: 70rem;
     background-image: url(./images/Herosectionbg.png);
     background-size: cover;
-    padding-left: 6%;
-    padding-right:6%;
+    padding-left: 0%;
+    padding-right:0%;
     padding-top: 3rem;
     padding-bottom: 4rem;
     
 }
 
 .imagessss{
-    
-    padding-bottom: 15rem;
+   padding-top: 2rem;
+
 
     }
 .text{
@@ -164,9 +171,18 @@ p{
     color: greenyellow !important;
     font-weight: bold;
     font-size: 2.7rem;
+    padding-left: 5%;
+    padding-right: 5rem;
 }
 .newtext{
     color: white;
+    
+}
+.news{
+    padding-left: 5%;
+    padding-right: 5rem;
+    color:white; 
+    line-height: 0.5rem;
 }
 .greenbutton{
     margin-left: 0rem;
@@ -208,6 +224,8 @@ p{
    border-radius: 0.3rem;
    border-color: greenyellow;
    padding-bottom: 0.1;
+   margin-left: 5%;
+   margin-right: 5%;
 }
 .head{
     padding-left: 5rem;
@@ -229,8 +247,11 @@ p{
 #corner{
     width: 8rem;
     padding-top: 2rem;
+    display: none !important;
 
-
+}
+#corn{
+    display: inline !important;
 }
 
 }
@@ -263,21 +284,25 @@ p{
     background-color: #000000 !important;
     
 }
+.news{
+    padding-left: 5%;
+    padding-right: 5%;
+}
 .herosection{
     width: 100;
-   height:auto;
+   height:70rem;
     background-image: url(./images/Herosectionbg.png);
     background-size: cover;
-    padding-left: 6%;
-    padding-right:6%;
+    padding-left: 0%;
+    padding-right:0%;
     padding-top: 5rem;
-    padding-bottom: -3rem;
+    
     
 }
 
 .imagessss{
+    padding-top: 2rem;
     
-    padding-bottom: 15rem;
 
     }
 .text{
@@ -385,13 +410,13 @@ p{
     
     .herosection{
         width: 100;
-       height: 100vh;
+       height: 45rem;
         background-image: url(./images/Herosectionbg.png);
         background-size: cover;
         padding-left: 5%;
         padding-right:5%;
-        padding-top: 9rem;
-        
+        padding-top: 4rem;
+        padding-bottom: 5rem;
     }
 
     .imagessss{
@@ -416,8 +441,11 @@ p{
  
 #corner{
     width: 6rem;
-    
+    display: inline !important;
 }   
+#corn{
+    display: none !important;
+}
 
 }
 
@@ -435,7 +463,7 @@ p{
 
     .herosection{
         width: 100;
-        height: 65%;
+        height: 60rem;
         background-image: url(./images/Herosectionbg.png);
         background-size: contain;
         padding-left: 5%;
@@ -448,6 +476,7 @@ p{
     .imagessss{
     padding-left: 14rem;
 padding-bottom: 20vh;
+
     }    
 
     .d-flex{
@@ -457,13 +486,25 @@ padding-bottom: 20vh;
  
 #corner{
     width: 8rem;
-    
+    display: inline !important;
     
 }
+
 } 
 
 @media (min-width: 992px) {
     
+    .herosection{
+        width: 100;
+        height: 100vh;
+        background-image: url(./images/Herosectionbg.png);
+        background-size: contain;
+        padding-left: 5%;
+        padding-right:5%;
+        padding-top: 7rem;
+        
+        
+    }
     
 }
 
